# oracle_project

./: .env  .gitignore  README.md  chat.py  chat_model.py  convert.py  indexing.py  main.py  metadata.json  pyproject.toml  ui.py
knowledge_base/: IATF.md  carta_de_requisitos.md
