[project]
name = "oracle-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.50.0",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.32",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
]
